update subscription page

--- a/modules/pdf_generator/templates/pdf-generator-feed-icon.html.twig
+++ b/modules/pdf_generator/templates/pdf-generator-feed-icon.html.twig
@@ -15,7 +15,7 @@
 <div class="lorvens-widget text-right my-3 d-inline-flex float-right">
   <div class="col-sm-12">
     <a href="{{ url }}"{{ attributes.addClass('pdf-feed feed-icon btn btn-primary btn-lg h-50 rounded-5') }}>
-      Report
+      PDF Export
     </a>
   </div>
 </div>
