--- a/modules/views_data_export/templates/export-icon.html.twig
+++ b/modules/views_data_export/templates/export-icon.html.twig
@@ -16,7 +16,7 @@
   <div class="col-sm-12">
     <a href="{{ url }}"{{ attributes.addClass('csv-feed feed-icon btn btn-primary btn-lg h-50 rounded-5') }}>
     {# {{ 'Download @format'|t({'@format': format}) }} #}
-    Export
+    CSV Export {{ current_package }}
     </a>
   </div>
 </div>
