--- a/themes/FleetManagement/templates/layout/page--user--register--company.html.twig
+++ b/themes/FleetManagement/templates/layout/page--user--register--company.html.twig
@@ -116,7 +116,7 @@
           <span class="ti-menu" id="sidebarCollapse"></span>
         </div>
         <ul class="nav justify-content-end">
-          <li class="nav-item">
+          <li class="nav-item user-profile">
             <a
               class="nav-link dropdown-toggle"
               data-toggle="dropdown"
