--- a/themes/FleetManagement/assets/front/css/frontdesign.css
+++ b/themes/FleetManagement/assets/front/css/frontdesign.css
@@ -282,3 +282,141 @@ textarea{
     margin-top: 20% !important;
   }
 } */
+.align-items-stretch.php-email-form .lorvens-widget #edit-actions-submit{
+  margin-top: 0px !important;
+}
+.align-items-stretch.php-email-form .lorvens-widget{
+  width: 100%;
+}
+.align-items-stretch.php-email-form .lorvens-widget .col-sm-12{
+  padding: 0 150px;
+}
+
+#edit-actions {
+	text-align: center;
+	display: inline-block;
+}
+
+.lorvens-widget {
+	width: 100%;
+}
+
+#user-login-form #edit-submit{
+  width: auto;
+}
+#user-register-form #edit-submit {
+	width: auto;
+	display: inline;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .header-buttons {
+    margin-left: 0px !important;
+    margin-top: 35% !important;
+    position: absolute;
+    overflow: hidden;
+    display: inline-block;
+    right: 5%;
+  }
+  
+  .header-scrolled .header-buttons {
+    display: none;
+  }
+
+  #hero {
+    height: auto;
+    text-align: center;
+  }
+  .services .icon-box {
+    width: 100%;
+    min-height: auto;
+  }
+  section#about,
+  section#faq,
+  section#pricing {
+    padding: 85px 0 0 0;
+  }
+  #footer .footer-top {
+    padding: 30px 0 30px 0;
+    background: #fff;
+  }
+  .pricing .box{
+    height: auto;
+  }
+  ul.plist {
+    min-height: auto;
+  }
+  .contact .info {
+    padding: 30px 30px 60px 30px;
+  }
+  .contact .php-email-form{
+    margin-top: 20px !important;
+    padding: 30px !important;
+  }
+  .align-items-stretch{
+    padding-right: 0px !important;
+    padding-left: 0px !important;
+  }
+  #edit-actions-submit{
+    margin-top: 0px !important;
+  }
+  .align-items-stretch.php-email-form .lorvens-widget .col-sm-12{
+    padding: 0;
+  }
+  footer .user_avatar .row{
+    margin: 0px !important;
+  }
+  .user_avatar #about .container.aos-init.aos-animate{
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+  }
+
+  #user-login-form,
+  #user-register-form{
+    margin-top: 30% !important;
+  }
+
+  #user-login-form .form-control {
+    width: 100% !important;
+  }
+
+  input[type=text],
+  input[type=email],
+  input[type=password],
+  input[type=file],
+  textarea{
+    width: 100% !important;
+  }
+
+  #user-login-form #edit-actions .lorvens-widget{
+    width: 100%;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  .header-buttons {
+    margin-right: 35px;
+  }
+  .services .icon-box h4 {
+    min-height: auto;
+  }
+  .cta .cta-btn-container {
+    display: inline-block;
+  }
+
+  #user-login-form .form-control {
+    width: 100% !important;
+  }
+
+  input[type=text],
+  input[type=email],
+  input[type=password],
+  input[type=file],
+  textarea{
+    width: 100% !important;
+  }
+
+  #user-login-form,
+  #user-register-form{
+    margin-top: 15% !important;
+  }
+}
