--- a/themes/FleetManagement/templates/layout/page--user--%.html.twig
+++ b/themes/FleetManagement/templates/layout/page--user--%.html.twig
@@ -83,7 +83,7 @@
                   </div>
               </div>
             </li>
-            <li class="nav-item">
+            <li class="nav-item user-profile">
               <a
                 class="nav-link dropdown-toggle"
                 data-toggle="dropdown"
