--- a/themes/FleetManagement/templates/page--node--106.html.twig
+++ b/themes/FleetManagement/templates/page--node--106.html.twig
@@ -4,7 +4,7 @@
   <div class="container-fluid px-5 d-flex align-items-center">
     <h1 class="logo mr-auto"><a href="{{ url('<front>') }}">DIGIFLEET</a></h1>
     {{ page.header }}
-    <div style="margin-left: 50px">
+    <div style="margin-left: 50px" class="header-buttons">
       <a href="{{ url('<front>') }}user/login" class="btn btn-success">login</a>
       <a href="{{ url('<front>') }}register/company" class="btn btn-primary"
         >Register</a
