--- a/themes/FleetManagement/templates/page--node--207.html.twig
+++ b/themes/FleetManagement/templates/page--node--207.html.twig
@@ -94,7 +94,7 @@
                 </div>
             </div>
           </li>
-          <li class="nav-item">
+          <li class="nav-item user-profile">
             <a
               class="nav-link dropdown-toggle"
               data-toggle="dropdown"
