--- a/themes/FleetManagement/templates/page--node--246.html.twig
+++ b/themes/FleetManagement/templates/page--node--246.html.twig
@@ -26,7 +26,7 @@
 <div class="wrapper">
   <!-- Sidebar -->
   <nav id="sidebar" class="lorvens-bg disabled">
-    <div class="sidebar-header">
+    <div class="sidebar-header user-profile">
       {% if role == 'company' %} {% set home_url = base_url ~
       '/company/dashboard' %} {% elseif role == 'data_entry' %} {% set home_url =
       base_url ~ '/operator/dashboard' %} {% elseif role == 'administrator' %}
@@ -96,7 +96,7 @@
                 </div>
             </div>
           </li>
-          <li class="nav-item">
+          <li class="nav-item user-profile">
             <a
               class="nav-link dropdown-toggle"
               data-toggle="dropdown"
@@ -137,11 +137,12 @@
     </ol>
     <!-- /Breadcrumb -->
     <!-- Main Content -->
-
+    <input id="package" name="package" type="hidden" value="{{ expiry_status }}"
+    />
     <div class="">
       <div class="widget-area-2">
         <!-- Item -->
-        <h3 class="widget-title">Renew Subscription</h3>
+        <h3 class="widget-title">Renew Subscription</h3>        
         <div class="row">
           <div class="col-md-12">
             <div class="">
@@ -169,13 +170,22 @@
                         <p class="ml-2 h6"> - Employee Details </p>
                         <p class="ml-2 h6"> - Vehicle Allotment Details </p>
                         <p class="ml-2 h6"> - Fuel Filling Details </p>
+                        <p class="ml-2 h6"> - Branches and Departments </p>
                       </div>
                     </div>
                     <div class="block-content block-content-full bg-body-light">
                       <div class="lorvens-widget">
                         <div class="col-sm-12">
                           <!-- <i class="fa fa-arrow-up mr-1"></i> -->
-                          <input type="submit" name="bronze-btn" id="bronze-btn" value="Subscribe" class="btn btn-primary btn-lg btn-block h-50 rounded-5"/>
+                          {% if expiry_status == 'new-user' %}
+                            <input type="submit" name="bronze-btn" id="bronze-btn" value="Subscribe" class="btn btn-primary btn-lg btn-block h-50 rounded-5"/>
+                          {% else %}                              
+                            {% if package == 'Bronze' or package == 'Silver' or package == 'Gold' or package == 'Platinum' %}
+                              <input type="button" name="bronze-btn" id="bronze-btn" value="Subscribe" class="btn btn-primary btn-lg btn-block h-50 rounded-5" disabled/>
+                            {% else %}
+                              <input type="submit" name="bronze-btn" id="bronze-btn" value="Subscribe" class="btn btn-primary btn-lg btn-block h-50 rounded-5"/>
+                            {% endif %}
+                          {% endif %}
                         </div>
                       </div>
                     </div>
@@ -205,16 +215,24 @@
                         <p class="h6"><i class="fa fa-check mr-1"></i> Print reports</p>
                         <p class="h6"><i class="fa fa-check mr-1"></i> Bronze services</p>
                         <p class="h6"><i class="fa fa-check mr-1"></i> Management of</p>
-                        <p class="ml-2 mt-4 h6"> - Branches and Departments </p>
-                        <p class="ml-2 h6"> - Vehicle Maintenance </p>
+                        <!-- <p class="ml-2 mt-4 h6"> - Branches and Departments </p> -->
+                        <p class="ml-2 mt-4 h6"> - Vehicle Maintenance </p>
                         <p class="ml-2 h6"> - Users and Security </p>
                       </div>
                     </div>
                     <div class="block-content block-content-full bg-body-light">
                       <div class="lorvens-widget">
                         <div class="col-sm-12">
+                          {% if expiry_status == 'new-user' %}
+                            <input type="submit" name="silver-btn" id="silver-btn" value="Subscribe" class="btn btn-primary btn-lg btn-block h-50 rounded-5"/>
+                          {% else %}   
+                            {% if package == 'Silver' or package == 'Gold' or package == 'Platinum' %}
+                              <input type="button" name="silver-btn" id="silver-btn" value="Subscribe" class="btn btn-primary btn-lg btn-block h-50 rounded-5" disabled/>
+                            {% else %}
+                              <input type="submit" name="silver-btn" id="silver-btn" value="Subscribe" class="btn btn-primary btn-lg btn-block h-50 rounded-5"/>
+                            {% endif %}
+                          {% endif %}
                           <!-- <i class="fa fa-arrow-up mr-1"></i> -->
-                          <input type="submit" name="silver-btn" id="silver-btn" value="Subscribe" class="btn btn-primary btn-lg btn-block h-50 rounded-5"/>
                         </div>
                       </div>
                     </div>
@@ -250,8 +268,16 @@
                     <div class="block-content block-content-full bg-body-light">
                       <div class="lorvens-widget">
                         <div class="col-sm-12">
+                          {% if expiry_status == 'new-user' %}
+                            <input type="submit" name="gold-btn" id="gold-btn" value="Subscribe" class="btn btn-primary btn-lg btn-block h-50 rounded-5"/>
+                          {% else %}   
+                            {% if package == 'Gold' or package == 'Platinum' %}
+                              <input type="button" name="gold-btn" id="gold-btn" value="Subscribe" class="btn btn-primary btn-lg btn-block h-50 rounded-5" disabled/>
+                            {% else %}
+                              <input type="submit" name="gold-btn" id="gold-btn" value="Subscribe" class="btn btn-primary btn-lg btn-block h-50 rounded-5"/>
+                            {% endif %}
+                          {% endif %}
                           <!-- <i class="fa fa-arrow-up mr-1"></i> -->
-                          <input type="submit" name="gold-btn" id="gold-btn" value="Subscribe" class="btn btn-primary btn-lg btn-block h-50 rounded-5"/>
                         </div>
                       </div>
                     </div>
@@ -287,8 +313,8 @@
                     <div class="block-content block-content-full bg-body-light">
                       <div class="lorvens-widget">
                         <div class="col-sm-12">
+                            <input type="submit" name="platinum-btn" id="platinum-btn" value="Subscribe" class="btn btn-primary btn-lg btn-block h-50 rounded-5"/>
                           <!-- <i class="fa fa-arrow-up mr-1"></i> -->
-                          <input type="submit" name="platinum-btn" id="platinum-btn" value="Subscribe" class="btn btn-primary btn-lg btn-block h-50 rounded-5"/>
                         </div>
                       </div>
                     </div>
@@ -316,75 +342,75 @@
   <span class="ti-angle-up"></span>
 </a>
 <script>
-  var package = document.getElementById("package").value;
-  // console.log(package);
-  if (package == "expired") {
-    Swal.fire({
-      title: 'Package Expired!',
-      text: "Please Renew Your Package!",
-      icon: 'error',
-      showCancelButton: true,
-      confirmButtonColor: '#3085d6',
-      cancelButtonColor: '#d33',
-      confirmButtonText: 'Subscribe!',
-      cancelButtonText: 'Logout',
-      allowOutsideClick: false,
-      allowEscapeKey: false,
-      allowEnterKey:false,
-      showClass: {
-        popup: 'swal2-noanimation',
-        backdrop: 'swal2-noanimation'
-      },
-      hideClass: {
-        popup: '',
-        backdrop: ''
-      }
-    }).then((result) => {
-      console.log(result);
-      if (result.isConfirmed) {
-        // window.location.href = "https://www.google.com/";
-        window.location.href = '{{ base_url }}/renew';
-      }
-      if(result.isDismissed){
-        // window.location.href = "https://www.google.com/";
-        window.location.href = '{{ base_url }}/user/logout';
-      }
-    })
-  }
+  // var package = document.getElementById("package").value;
+  // // console.log(package);
+  // if (package == "expired") {
+  //   Swal.fire({
+  //     title: 'Package Expired!',
+  //     text: "Please Renew Your Package!",
+  //     icon: 'error',
+  //     showCancelButton: true,
+  //     confirmButtonColor: '#3085d6',
+  //     cancelButtonColor: '#d33',
+  //     confirmButtonText: 'Subscribe!',
+  //     cancelButtonText: 'Logout',
+  //     allowOutsideClick: false,
+  //     allowEscapeKey: false,
+  //     allowEnterKey:false,
+  //     showClass: {
+  //       popup: 'swal2-noanimation',
+  //       backdrop: 'swal2-noanimation'
+  //     },
+  //     hideClass: {
+  //       popup: '',
+  //       backdrop: ''
+  //     }
+  //   }).then((result) => {
+  //     console.log(result);
+  //     if (result.isConfirmed) {
+  //       // window.location.href = "https://www.google.com/";
+  //       window.location.href = '{{ base_url }}/renew';
+  //     }
+  //     if(result.isDismissed){
+  //       // window.location.href = "https://www.google.com/";
+  //       window.location.href = '{{ base_url }}/user/logout';
+  //     }
+  //   })
+  // }
 
-  if (package == "new-user") {
-    Swal.fire({
-      title: 'Subscribe Package!',
-      text: "Please Choose Your Package!",
-      icon: 'info',
-      showCancelButton: true,
-      confirmButtonColor: '#3085d6',
-      cancelButtonColor: '#d33',
-      confirmButtonText: 'Subscribe!',
-      cancelButtonText: 'Logout',
-      allowOutsideClick: false,
-      allowEscapeKey: false,
-      allowEnterKey:false,
-      showClass: {
-        popup: 'swal2-noanimation',
-        backdrop: 'swal2-noanimation'
-      },
-      hideClass: {
-        popup: '',
-        backdrop: ''
-      }
-    }).then((result) => {
-      console.log(result);
-      if (result.isConfirmed) {
-        // window.location.href = "https://www.google.com/";
-        window.location.href = '{{ base_url }}/renew';
-      }
-      if(result.isDismissed){
-        // window.location.href = "https://www.google.com/";
-        window.location.href = '{{ base_url }}/user/logout';
-      }
-    })
-  }
+  // if (package == "new-user") {
+  //   Swal.fire({
+  //     title: 'Subscribe Package!',
+  //     text: "Please Choose Your Package!",
+  //     icon: 'info',
+  //     showCancelButton: true,
+  //     confirmButtonColor: '#3085d6',
+  //     cancelButtonColor: '#d33',
+  //     confirmButtonText: 'Subscribe!',
+  //     cancelButtonText: 'Logout',
+  //     allowOutsideClick: false,
+  //     allowEscapeKey: false,
+  //     allowEnterKey:false,
+  //     showClass: {
+  //       popup: 'swal2-noanimation',
+  //       backdrop: 'swal2-noanimation'
+  //     },
+  //     hideClass: {
+  //       popup: '',
+  //       backdrop: ''
+  //     }
+  //   }).then((result) => {
+  //     console.log(result);
+  //     if (result.isConfirmed) {
+  //       // window.location.href = "https://www.google.com/";
+  //       window.location.href = '{{ base_url }}/renew';
+  //     }
+  //     if(result.isDismissed){
+  //       // window.location.href = "https://www.google.com/";
+  //       window.location.href = '{{ base_url }}/user/logout';
+  //     }
+  //   })
+  // }
 </script>
 <script src="{{url('<front>')}}themes/FleetManagement/assets/back/js/sweetalert2.all.js"></script>
 <script src="{{url('<front>')}}themes/FleetManagement/assets/back/js/custom.js"></script>
